--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "flowbite": "^2.2.0",
     "framer-motion": "^10.16.16",
     "localforage": "^1.10.0",
