--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.1",
     "react-tooltip": "^5.25.0",
+    "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
