--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.5",
     "axios": "^1.6.2",
     "file-saver": "^2.0.5",
     "flowbite": "^2.2.0",
