--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.1",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.25.0",
     "react-type-animation": "^3.2.0",
