--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.17.5",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.2",
     "file-saver": "^2.0.5",
     "flowbite": "^2.2.0",
